--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-netlify-cms": "^5.4.1",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sass": "^4.4.0",
+    "gatsby-source-filesystem": "^3.4.0",
     "netlify-cms-app": "^2.15.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
